metadata: re-construct table sub module
